immunoClust 1.1.1.
  NEW FEATRUES:
    * A normalization step which the sample cell-clusters to the common
      meta-cluster model is included an optionally activated during the
      major meta-clustering process.

  CHANGES:
    * The meta.ME C-binding and return value was modified in a way that the
      A-Posterior probability matrix Z for a cell-cluster belonging to a
      meta-cluster is also calculated and returned.

immunoClust 1.0.0:
    The first version caintains basically the functios and routines usesd to 
    obtain the results of 
    "Soerensen, T., Baumgart, S., Durek, P., Gruetzkau, A. and Haeupl, T. 
    immunoClust - an automated analysis pipeline for the identification of 
    immunophenotypic signatures in high-dimensional cytometric datasets. 
    Cytometry A (accepted)."

  CHANGES:
    * The code was cleaned and modified in the C-binding calls to make
      it runable on R 3.1.2.
    * A bug in the cell.hclust function was fixed, which does not effect
      the general results but lead to minor differences in concrete
      numbers.