@@ -2,8 +2,8 @@ Package: immunoClust
 Type: Package
 Title: immunoClust - Automated Pipeline for Population Detection in
         Flow Cytometry
-Version: 1.1.1
-Date: 2015-09-09
+Version: 1.1.2
+Date: 2015-09-18
 Author: Till Soerensen <till-antoni.soerensen@charite.de>
 Maintainer: Till Soerensen <till-antoni.soerensen@charite.de>
 Depends: R(>= 2.13.0), methods, stats, graphics, grid, lattice,
